--- a/browser/l10n/locore/he.json
+++ b/browser/l10n/locore/he.json
@@ -524,7 +524,7 @@
 "Rohingya Hanifi":"רוהינגיה בכתב הניפי",
 "Romanian (Moldova)":"רומנית (מולדובה)",
 "Romanian (Romania)":"רומנית (רומניה)",
-"Rubies":"טקסט שוליים זעירים (טקסט "רובי")",
+"Rubies":"טקסט שוליים זעירים (טקסט \"רובי\")",
 "Russian":"רוסית",
 "Rusyn (Slovakia)":"רוסינית (סלובקיה)",
 "Rusyn (Ukraine)":"רוסינית (אוקראינה)",
