--- a/browser/po/welcome-slideshow-de.po
+++ b/browser/po/welcome-slideshow-de.po
@@ -1,96 +1,96 @@
 #: browser/welcome/welcome-slideshow.odp:1
 msgid "Collabora Office"
-msgstr ""
+msgstr "Collabora Office"
 
 #: browser/welcome/welcome-slideshow.odp:2
 msgid "Same look, same code"
-msgstr ""
+msgstr "Gleicher Look, gleicher Code"
 
 #: browser/welcome/welcome-slideshow.odp:3
 msgid "Your files, your device"
-msgstr ""
+msgstr "Ihre Dateien, Ihr Gerät"
 
 #: browser/welcome/welcome-slideshow.odp:4
 msgid "Find out more!"
-msgstr ""
+msgstr "Erfahren Sie mehr!"
 
 #: browser/welcome/welcome-slideshow.odp:5
 msgid "Open it and feel instantly at home:"
-msgstr ""
+msgstr "Öffne es und fühle dich sofort wie zu Hause:"
 
 #: browser/welcome/welcome-slideshow.odp:6
 msgid "ODF or DOCX"
-msgstr ""
+msgstr "ODF oder DOCX"
 
 #: browser/welcome/welcome-slideshow.odp:7
 msgid "Quick edits or deep dives"
-msgstr ""
+msgstr "Schnelle Bearbeitungen oder detaillierte Analysen"
 
 #: browser/welcome/welcome-slideshow.odp:8
-msgid "A clean, beautiful interfaceaa"
-msgstr ""
+msgid "A clean, beautiful interface"
+msgstr "Eine saubere, schöne Benutzeroberfläche"
 
 #: browser/welcome/welcome-slideshow.odp:9
 msgid "Next"
-msgstr ""
+msgstr "Weiter"
 
 #: browser/welcome/welcome-slideshow.odp:10
 msgid "The familiar, powerful Collabora Online experience"
-msgstr ""
+msgstr "Die vertraute, leistungsstarke Collabora Online-Erfahrung"
 
 #: browser/welcome/welcome-slideshow.odp:11
 msgid "Now locally on Windows, macOS, and Linux"
-msgstr ""
+msgstr "Jetzt lokal unter Windows, macOS und Linux"
 
 #: browser/welcome/welcome-slideshow.odp:12
 msgid "Enjoy editing your documents locally with an intuitive, intelligent interface"
-msgstr ""
+msgstr "Bearbeiten Sie Ihre Dokumente ganz einfach lokal mit einer intuitiven, intelligenten Benutzeroberfläche."
 
 #: browser/welcome/welcome-slideshow.odp:13
 msgid "Navigator bar with document search"
-msgstr ""
+msgstr "Bearbeiten Sie Ihre Dokumente ganz einfach lokal mit einer intuitiven, intelligenten Benutzeroberfläche."
 
 #: browser/welcome/welcome-slideshow.odp:14
 msgid "Helpful quick access examples"
-msgstr ""
+msgstr "Nützliche Beispiele für den Schnellzugriff"
 
 #: browser/welcome/welcome-slideshow.odp:15
 msgid "Create and edit tables within documents"
-msgstr ""
+msgstr "Erstellen und bearbeiten Sie Tabellen innerhalb von Dokumenten."
 
 #: browser/welcome/welcome-slideshow.odp:16
 msgid "Powerful data and charting tools"
-msgstr ""
+msgstr "Leistungsstarke Daten- und Diagrammtools"
 
 #: browser/welcome/welcome-slideshow.odp:17
 msgid "Privacy by design"
-msgstr ""
+msgstr "Datenschutz durch Technikgestaltung"
 
 #: browser/welcome/welcome-slideshow.odp:18
 msgid "Fully open source – no hidden processes, no telemetry"
-msgstr ""
+msgstr "Vollständig quelloffen – keine versteckten Prozesse, keine Telemetrie"
 
 #: browser/welcome/welcome-slideshow.odp:19
 msgid "Documents never leave your device – unless you say so"
-msgstr ""
+msgstr "Dokumente verlassen niemals Ihr Gerät – es sei denn, Sie geben dies ausdrücklich frei."
 
 #: browser/welcome/welcome-slideshow.odp:20
 msgid "Collabora Office Desktop"
-msgstr ""
+msgstr "Collabora Office Desktop"
 
 #: browser/welcome/welcome-slideshow.odp:21
 msgid "Take back control"
-msgstr ""
+msgstr "Die Kontrolle zurückgewinnen"
 
 #: browser/welcome/welcome-slideshow.odp:22
 msgid "We’re excited to share this release with our community"
-msgstr ""
+msgstr "Wir freuen uns, diese Veröffentlichung mit unserer Community zu teilen."
 
 #: browser/welcome/welcome-slideshow.odp:23
 msgid "Try it out. Break things. Let us know what works and what doesn’t."
-msgstr ""
+msgstr "Probieren Sie es aus. Brechen Sie Dinge. Lassen Sie uns wissen, was funktioniert und was nicht."
 
 #: browser/welcome/welcome-slideshow.odp:24
 msgid "Together, we're building a privacy-respecting, open, and elegant office suite for everyone."
-msgstr ""
+msgstr "Gemeinsam entwickeln wir eine datenschutzkonforme, offene und elegante Office-Suite für alle."
 
