translation: fix typo
Signed-off-by: Rashesh Padia <rashesh.padia@collabora.com>
Change-Id: If8ee1e18c5ee5c8bf1d3d6bfcb286cee9bc3f9b9

--- a/browser/po/templates/welcome-slideshow.pot
+++ b/browser/po/templates/welcome-slideshow.pot
@@ -45,7 +45,7 @@ msgid "Quick edits or deep dives"
 msgstr ""
 
 #: browser/welcome/welcome-slideshow.odp:8
-msgid "A clean, beautiful interfaceaa"
+msgid "A clean, beautiful interface"
 msgstr ""
 
 #: browser/welcome/welcome-slideshow.odp:9
