Update uno command translations
Signed-off-by: Andras Timar <andras.timar@collabora.com>
Change-Id: Ia4e73c89ebf8dae46aa2b8f8fde1b100888186e7

--- a/browser/l10n/uno/de.json
+++ b/browser/l10n/uno/de.json
@@ -453,6 +453,7 @@
 "Puzzle":"Puzzle",
 "P~aragraph...":"~Absatz…",
 "QR and ~Barcode...":"QR~- und Barcode…",
+"Re-order pages":"Seiten neu anordnen",
 "Record Track Changes":"Änderungen aufzeichnen",
 "Rectangle":"Rechteck",
 "Rectangle (double click for multi-selection)":"Rechteck (Doppelklick für Mehrfachauswahl)",
