--- a/browser/l10n/uno/es.json
+++ b/browser/l10n/uno/es.json
@@ -173,6 +173,7 @@
 "Edit Sparkline...":"Editar minigráfico…",
 "Ellipse":"Elipse",
 "Ellipse (double click for multi-selection)":"Elipse (para seleccionar varias, haga una pulsación doble)",
+"Exit Sheet View":"Salir de vista de hoja",
 "Explosion":"Explosión",
 "E~xecute Interaction...":"Ejec~utar interacción…",
 "E~xit Group":"A~bandonar grupo",
@@ -396,6 +397,7 @@
 "Na~vigator":"Na~vegador",
 "New Canvas Slide":"Diapositiva lienzo nueva",
 "New Page":"Página nueva",
+"New Sheet View":"Vista de hoja nueva",
 "Next":"Siguiente",
 "Next Page":"Página siguiente",
 "Next Track Change":"Cambio siguiente",
@@ -451,6 +453,7 @@
 "Puzzle":"Rompecabezas",
 "P~aragraph...":"Pá~rrafo...",
 "QR and ~Barcode...":"Código de barras y ~QR…",
+"Re-order pages":"Reordenar páginas",
 "Record Track Changes":"Grabar cambios",
 "Rectangle":"Rectángulo",
 "Rectangle (double click for multi-selection)":"Rectángulo (para seleccionar varios, haga una pulsación doble)",
@@ -461,6 +464,7 @@
 "Reject Change":"Rechazar cambio",
 "Reject and Move to Next":"Rechazar y pasar al siguiente",
 "Remove Noise":"Eliminar interferencias",
+"Remove Sheet View":"Quitar vista de hoja",
 "Rename Master":"Cambiar nombre de patrón",
 "Rename S~heet...":"Cambiar ~nombre de hoja",
 "Reply Comment":"Responder comentario",
@@ -495,6 +499,7 @@
 "Select Cell":"Seleccionar celda",
 "Select Column":"Seleccionar columna",
 "Select Row":"Seleccionar fila",
+"Select Sheet View":"Seleccionar vista de hoja",
 "Select Table":"Seleccionar tabla",
 "Select ~All":"~Seleccionar todo",
 "Select ~Range...":"~Seleccionar intervalo…",
@@ -545,6 +550,8 @@
 "Subscript":"Subíndice",
 "Sun":"Sol",
 "Superscript":"Superíndice",
+"Switch To Next Sheet View":"Cambiar a vista de hoja siguiente",
+"Switch To Previous Sheet View":"Cambiar a vista de hoja anterior",
 "Symbol":"Símbolo",
 "S~how Columns":"~Mostrar columnas",
 "S~lide":"~Diapositiva",
