--- a/browser/l10n/uno/gl.json
+++ b/browser/l10n/uno/gl.json
@@ -173,6 +173,7 @@
 "Edit Sparkline...":"Editar minigráfico...",
 "Ellipse":"Elipse",
 "Ellipse (double click for multi-selection)":"Elipse (prema dúas veces para seleccionar varias)",
+"Exit Sheet View":"Saír da vista da folla",
 "Explosion":"Explosión",
 "E~xecute Interaction...":"E~xecutar interacción...",
 "E~xit Group":"~Saír do grupo",
@@ -397,6 +398,7 @@
 "Na~vigator":"~Navegador",
 "New Canvas Slide":"Nova diapositiva de lenzo",
 "New Page":"Páxina nova",
+"New Sheet View":"Nova vista de folla",
 "Next":"Seguinte",
 "Next Page":"Páxina seguinte",
 "Next Track Change":"Cambio seguinte",
@@ -453,6 +455,7 @@
 "Puzzle":"Quebracabezas",
 "P~aragraph...":"P~arágrafo...",
 "QR and ~Barcode...":"Código de ~barras e QR...",
+"Re-order pages":"Reordenar as páxinas",
 "Record Track Changes":"Gravar cambios",
 "Rectangle":"Rectángulo",
 "Rectangle (double click for multi-selection)":"Rectángulo (prema dúas veces para seleccionar varios)",
@@ -465,6 +468,7 @@
 "Reject Change":"Rexeitar cambio",
 "Reject and Move to Next":"Rexeitar e avanzar para o seguinte",
 "Remove Noise":"Retirar interferencias",
+"Remove Sheet View":"Retirar a vista de folla",
 "Rename Master":"Renomear o principal",
 "Rename S~heet...":"Renomear ~folla...",
 "Reply Comment":"Responder ao comentario",
@@ -499,6 +503,7 @@
 "Select Cell":"Seleccionar cela",
 "Select Column":"Seleccionar columna",
 "Select Row":"Seleccionar fila",
+"Select Sheet View":"Seleccionar a vista de folla",
 "Select Table":"Seleccionar táboa",
 "Select ~All":"Seleccionar ~todo",
 "Select ~Range...":"Selecciona~r intervalo...",
@@ -549,6 +554,8 @@
 "Subscript":"Subíndice",
 "Sun":"Sol",
 "Superscript":"Superíndice",
+"Switch To Next Sheet View":"Cambiar á seguinte vista de folla",
+"Switch To Previous Sheet View":"Cambiar á vista de folla anterior",
 "Symbol":"Símbolo",
 "S~how Columns":"Mo~strar columnas",
 "S~lide":"~Diapositiva",
