--- a/browser/l10n/uno/hr.json
+++ b/browser/l10n/uno/hr.json
@@ -151,6 +151,7 @@
 "Edit Hyperlink...":"Uredi poveznicu …",
 "Edit Section...":"Uređivanje odjeljka...",
 "Ellipse":"Elipsa",
+"Exit Sheet View":"Zatvori prikaz lista",
 "Explosion":"Eksplozija",
 "E~xecute Interaction...":"I~zvrši interakciju …",
 "E~xit Group":"~Izlaz iz grupe",
@@ -347,6 +348,7 @@
 "Na~vigator":"Na~vigator",
 "New Canvas Slide":"Novi slajd na platnu",
 "New Page":"Nova stranica",
+"New Sheet View":"Novi prikaz lista",
 "Next":"Sljedeće",
 "Next Page":"Sljedeća stranica",
 "Next Track Change":"Sljedeća zabilježena izmjena",
@@ -392,6 +394,7 @@
 "Pr~evious":"Pr~ethodno",
 "Puzzle":"Slagalica",
 "P~aragraph...":"~Odlomak...",
+"Re-order pages":"Promijeni redoslijeda stranica",
 "Record Track Changes":"Spremanje zabilježenih izmjena",
 "Rectangle":"Pravokutnik",
 "Rectangle, Rounded":"Pravokutnik, zaobljen",
@@ -403,6 +406,7 @@
 "Reject Change":"Odbacivanje izmjene",
 "Reject and Move to Next":"Odbij i prijeđi na sljedeću",
 "Remove Noise":"Ukloni buku",
+"Remove Sheet View":"Ukloni prikaz lista",
 "Rename Master":"Preimenuj glavnu stranicu",
 "Rename S~heet...":"Preimenuj ~list …",
 "Reply Comment":"Odgovori na komentar",
@@ -437,6 +441,7 @@
 "Select Cell":"Odaberi ćeliju",
 "Select Column":"Odaberi stupac",
 "Select Row":"Odaberite redak",
+"Select Sheet View":"Odaberi prikaz lista",
 "Select Table":"Odaberi tablicu",
 "Select ~All":"Od~aberi sve",
 "Select ~Range...":"Odabiranje ~raspona...",
@@ -479,6 +484,8 @@
 "Subscript":"Indeks",
 "Sun":"Sunce",
 "Superscript":"Eksponent",
+"Switch To Next Sheet View":"Prijeđi na novi prikaz lista",
+"Switch To Previous Sheet View":"Prijeđi na prethodni prikaz lista",
 "Symbol":"Simbol",
 "S~how Columns":"~Prikaži stupce",
 "S~lide":"S~lajd",
