--- a/browser/l10n/uno/hy.json
+++ b/browser/l10n/uno/hy.json
@@ -173,6 +173,7 @@
 "Edit Sparkline...":"Խմբագրել կայծային գծերը․․․",
 "Ellipse":"Էլլիպս",
 "Ellipse (double click for multi-selection)":"Էլիպս (կրկնակի սեղմում բազմակի ընտրության համար)",
+"Exit Sheet View":"Դուրս գալ թերթիկի դիտումից",
 "Explosion":"Բռնկում",
 "E~xecute Interaction...":"Կ~ատարել փոխազդեցությունը...",
 "E~xit Group":"Դ~ուրս եկեք խմբից",
@@ -397,6 +398,7 @@
 "Na~vigator":"Նա~վարկիչ",
 "New Canvas Slide":"Նոր Canvas սահիկ",
 "New Page":"Նոր էջ",
+"New Sheet View":"Նոր թերթիկի տեսք",
 "Next":"Հաջորդ",
 "Next Page":"Հաջորդ էջ",
 "Next Track Change":"Հաջորդ Փոփոխությանը հետևել",
@@ -453,6 +455,7 @@
 "Puzzle":"Գլուխկոտրուկ",
 "P~aragraph...":"Պ~արբերություն...",
 "QR and ~Barcode...":"QR and ~Նրբաթել կոդ...",
+"Re-order pages":"Վերադասավորել էջերը",
 "Record Track Changes":"Գրառել Փոփոխությունների հետևելը",
 "Rectangle":"Ուղղանկյուն",
 "Rectangle (double click for multi-selection)":"Ուղղանկյուն (կրկնակի սեղմում բազմակի ընտրության համար)",
@@ -465,6 +468,7 @@
 "Reject Change":"Մերժել փոփոխությունները",
 "Reject and Move to Next":"Մերժել և անցնել հաջորդին",
 "Remove Noise":"Հեռացնել աղմուկը",
+"Remove Sheet View":"Հեռացնել թերթիկի տեսքը",
 "Rename Master":"Անվանափոխեք վարպետը",
 "Rename S~heet...":"Անվանափոխել թ~երթը...",
 "Reply Comment":"Պատասխանել Մեկնաբանությանը",
@@ -499,6 +503,7 @@
 "Select Cell":"Ընտրել բջիջ",
 "Select Column":"Ընտրել Սյունակ",
 "Select Row":"Ընտրել Տող",
+"Select Sheet View":"Ընտրել թերթիկի տեսքը",
 "Select Table":"Ընտրել Աղյուսակ",
 "Select ~All":"Ընտրել ~Բոլորը",
 "Select ~Range...":"Ընտրեք ~Միջակայքը...",
@@ -549,6 +554,8 @@
 "Subscript":"Ստորին գիր",
 "Sun":"Արև",
 "Superscript":"Վերին գիր",
+"Switch To Next Sheet View":"Անցնել հաջորդ թերթիկի դիտմանը",
+"Switch To Previous Sheet View":"Անցնել նախորդ թերթիկի դիտմանը",
 "Symbol":"Նիշ",
 "S~how Columns":"Ց~ույց տալ Սյունակները",
 "S~lide":"Ս~ահիկ",
