--- a/browser/l10n/uno/pl.json
+++ b/browser/l10n/uno/pl.json
@@ -173,6 +173,7 @@
 "Edit Sparkline...":"Edytuj wykres przebiegu w czasie...",
 "Ellipse":"Elipsa",
 "Ellipse (double click for multi-selection)":"Elipsa (podwójne kliknięcie w celu wielokrotnego zaznaczenia)",
+"Exit Sheet View":"Opuść widok arkusza",
 "Explosion":"Eksplozja",
 "E~xecute Interaction...":"W~ykonaj interakcję...",
 "E~xit Group":"~Wyjdź z grupy",
@@ -397,6 +398,7 @@
 "Na~vigator":"Nawi~gator",
 "New Canvas Slide":"Nowy slajd płótna",
 "New Page":"Nowa strona",
+"New Sheet View":"Nowy widok arkusza",
 "Next":"Następna",
 "Next Page":"Następna strona",
 "Next Track Change":"Następna śledzona zmiana",
@@ -453,6 +455,7 @@
 "Puzzle":"Układanka",
 "P~aragraph...":"~Akapit...",
 "QR and ~Barcode...":"QR i ~kod kreskowy...",
+"Re-order pages":"Zmień kolejność stron",
 "Record Track Changes":"Rejestruj śledzenie zmian",
 "Rectangle":"Prostokąt",
 "Rectangle (double click for multi-selection)":"Prostokąt (podwójne kliknięcie w celu wielokrotnego zaznaczenia)",
@@ -465,6 +468,7 @@
 "Reject Change":"Odrzuć zmianę",
 "Reject and Move to Next":"Odrzuć i przejdź do następnej",
 "Remove Noise":"Usuń szum",
+"Remove Sheet View":"Usuń widok arkusza",
 "Rename Master":"Zmień nazwę wzorca",
 "Rename S~heet...":"Zmień nazwę a~rkusza...",
 "Reply Comment":"Odpowiedz na komentarz",
@@ -499,6 +503,7 @@
 "Select Cell":"Zaznacz komórkę",
 "Select Column":"Zaznacz kolumnę",
 "Select Row":"Zaznacz wiersz",
+"Select Sheet View":"Wybierz widok arkusza",
 "Select Table":"Wybierz tabelę",
 "Select ~All":"Z~aznacz wszystko",
 "Select ~Range...":"W~ybierz zakres...",
@@ -549,6 +554,8 @@
 "Subscript":"Indeks dolny",
 "Sun":"Słońce",
 "Superscript":"Indeks górny",
+"Switch To Next Sheet View":"Przełącz na następny widok arkusza",
+"Switch To Previous Sheet View":"Przełącz na poprzedni widok arkusza",
 "Symbol":"Symbol",
 "S~how Columns":"P~okaż kolumny",
 "S~lide":"S~lajd",
