--- a/browser/l10n/uno/uk.json
+++ b/browser/l10n/uno/uk.json
@@ -173,6 +173,7 @@
 "Edit Sparkline...":"Редагувати лінію тренду...",
 "Ellipse":"Еліпс",
 "Ellipse (double click for multi-selection)":"Еліпс (подвійний клац для множинного вибору)",
+"Exit Sheet View":"Вийти з режиму перегляду аркуша",
 "Explosion":"Спалах",
 "E~xecute Interaction...":"Виконати дію...",
 "E~xit Group":"Ви~йти з групи",
@@ -397,6 +398,7 @@
 "Na~vigator":"~Навігатор",
 "New Canvas Slide":"Новий слайд Canvas",
 "New Page":"Створити сторінку",
+"New Sheet View":"Новий вигляд аркуша",
 "Next":"Далі",
 "Next Page":"Наступна сторінка",
 "Next Track Change":"Наступна відстежена зміна",
@@ -453,6 +455,7 @@
 "Puzzle":"Мозаїка",
 "P~aragraph...":"Абза~ц...",
 "QR and ~Barcode...":"QR та ~штрих-код...",
+"Re-order pages":"Зміна порядку сторінок",
 "Record Track Changes":"Записувати відстежені зміни",
 "Rectangle":"Прямокутник",
 "Rectangle (double click for multi-selection)":"Прямокутник (подвійний клац для множинного вибору)",
@@ -465,6 +468,7 @@
 "Reject Change":"Відхилити зміну",
 "Reject and Move to Next":"Відхилити, перейти до наступного",
 "Remove Noise":"Видалити шум",
+"Remove Sheet View":"Вилучити подання аркуша",
 "Rename Master":"Перейменувати зразок",
 "Rename S~heet...":"Перейменувати аркуш...",
 "Reply Comment":"Відповісти на коментар",
@@ -499,6 +503,7 @@
 "Select Cell":"Обрати комірку",
 "Select Column":"Вибрати стовпець",
 "Select Row":"Вибрати рядок",
+"Select Sheet View":"Вибрати подання аркуша",
 "Select Table":"Виділити таблицю",
 "Select ~All":"Вибрати вс~е",
 "Select ~Range...":"Вибрати ~діапазон...",
@@ -549,6 +554,8 @@
 "Subscript":"Нижній індекс",
 "Sun":"Сонце",
 "Superscript":"Верхній індекс",
+"Switch To Next Sheet View":"Перейти до наступного подання аркуша",
+"Switch To Previous Sheet View":"Перейти до попереднього подання аркуша",
 "Symbol":"Символ",
 "S~how Columns":"Пока~зати стовпці",
 "S~lide":"~Слайд",
