--- a/browser/l10n/uno/cs.json
+++ b/browser/l10n/uno/cs.json
@@ -173,6 +173,7 @@
 "Edit Sparkline...":"Upravit minigraf...",
 "Ellipse":"Elipsa",
 "Ellipse (double click for multi-selection)":"Elipsa (klikněte dvakrát pro vícenásobný výběr)",
+"Exit Sheet View":"Ukončit zobrazení sešitu",
 "Explosion":"Výbuch",
 "E~xecute Interaction...":"~Spustit interakci...",
 "E~xit Group":"~Opustit skupinu",
@@ -397,6 +398,7 @@
 "Na~vigator":"~Navigátor",
 "New Canvas Slide":"Nový snímek plátna",
 "New Page":"Nová stránka",
+"New Sheet View":"Nové zobrazení sešitu",
 "Next":"Následující",
 "Next Page":"Další stránka",
 "Next Track Change":"Následující sledovaná změna",
@@ -453,6 +455,7 @@
 "Puzzle":"Puzzle",
 "P~aragraph...":"~Odstavec...",
 "QR and ~Barcode...":"QR a čá~rový kód",
+"Re-order pages":"Přeskupit stránky",
 "Record Track Changes":"Zaznamenávat změny",
 "Rectangle":"Obdélník",
 "Rectangle (double click for multi-selection)":"Obdélník (klikněte dvakrát pro vícenásobný výběr)",
@@ -465,6 +468,7 @@
 "Reject Change":"Odmítnout změnu",
 "Reject and Move to Next":"Odmítnout a přejít na další",
 "Remove Noise":"Odstranit šum",
+"Remove Sheet View":"Odebrat zobrazení sešitu",
 "Rename Master":"Přejmenovat předlohu",
 "Rename S~heet...":"~Přejmenovat list...",
 "Reply Comment":"Odpovědět na komentář",
@@ -499,6 +503,7 @@
 "Select Cell":"Vybrat buňku",
 "Select Column":"Vybrat sloupec",
 "Select Row":"Vybrat řádek",
+"Select Sheet View":"Vybrat zobrazení sešitu",
 "Select Table":"Vybrat tabulku",
 "Select ~All":"V~ybrat vše",
 "Select ~Range...":"~Vybrat oblast...",
@@ -549,6 +554,8 @@
 "Subscript":"Dolní index",
 "Sun":"Slunce",
 "Superscript":"Horní index",
+"Switch To Next Sheet View":"Přepnout na další zobrazení sešitu",
+"Switch To Previous Sheet View":"Přepnout na předchozí zobrazení sešitu",
 "Symbol":"Symbol",
 "S~how Columns":"~Zobrazit sloupce",
 "S~lide":"Sní~mek",
