--- a/browser/l10n/uno/hu.json
+++ b/browser/l10n/uno/hu.json
@@ -172,6 +172,7 @@
 "Edit Sparkline...":"Értékgörbe szerkesztése...",
 "Ellipse":"Ellipszis",
 "Ellipse (double click for multi-selection)":"Ellipszis (kattintson duplán többszörös kijelöléshez)",
+"Exit Sheet View":"Kilépés a munkalapnézetből",
 "Explosion":"Robbanás",
 "E~xecute Interaction...":"Köz~játék végrehajtása",
 "E~xit Group":"~Kilépés a csoportból",
@@ -394,6 +395,7 @@
 "Name...":"Név…",
 "Na~vigator":"N~avigátor",
 "New Page":"Új oldal",
+"New Sheet View":"Új munkalapnézet",
 "Next":"Következő",
 "Next Page":"Következő oldal",
 "Next Track Change":"Következő követett változás",
@@ -460,6 +462,7 @@
 "Reject Change":"Változás elvetése",
 "Reject and Move to Next":"Elvetés és a következőre lépés",
 "Remove Noise":"Zaj eltávolítása",
+"Remove Sheet View":"Munkalapnézet eltávolítása",
 "Rename Master":"Sablon átnevezése",
 "Rename S~heet...":"~Munkalap átnevezése...",
 "Reply Comment":"Válasz a megjegyzésre",
@@ -494,6 +497,7 @@
 "Select Cell":"Cella kijelölése",
 "Select Column":"Oszlop kijelölése",
 "Select Row":"Sor kijelölése",
+"Select Sheet View":"Munkalapnézet választása",
 "Select Table":"Táblázat kijelölése",
 "Select ~All":"~Mindet kijelöli",
 "Select ~Range...":"Tartomány ~kijelölése...",
@@ -544,6 +548,8 @@
 "Subscript":"Alsó index",
 "Sun":"Nap",
 "Superscript":"Felső index",
+"Switch To Next Sheet View":"Váltás a következő munkalapnézetre",
+"Switch To Previous Sheet View":"Váltás az előző munkalapnézetre",
 "Symbol":"Szimbólum",
 "S~how Columns":"~Oszlopok megjelenítése",
 "S~lide":"~Dia",
