--- a/browser/l10n/uno/sv.json
+++ b/browser/l10n/uno/sv.json
@@ -173,6 +173,7 @@
 "Edit Sparkline...":"Redigera miniatyrdiagram...",
 "Ellipse":"Ellips",
 "Ellipse (double click for multi-selection)":"Ellips (dubbelklicka för flerval)",
+"Exit Sheet View":"Avsluta vy för bladvisning",
 "Explosion":"Explosion",
 "E~xecute Interaction...":"U~tför interaktion...",
 "E~xit Group":"L~ämna grupp",
@@ -397,6 +398,7 @@
 "Na~vigator":"Na~vigator",
 "New Canvas Slide":"Ny Canvasbild",
 "New Page":"Ny sida",
+"New Sheet View":"Ny vy för bladvisning",
 "Next":"Nästa",
 "Next Page":"Nästa sida",
 "Next Track Change":"Nästa spårade ändring",
@@ -453,6 +455,7 @@
 "Puzzle":"Pussel",
 "P~aragraph...":"Styck~e...",
 "QR and ~Barcode...":"QR och ~streckkod...",
+"Re-order pages":"Ordna om sidor",
 "Record Track Changes":"Registrera ändringar",
 "Rectangle":"Rektangel",
 "Rectangle (double click for multi-selection)":"Rektangel (dubbelklicka för flerval)",
@@ -465,6 +468,7 @@
 "Reject Change":"Neka ändring",
 "Reject and Move to Next":"Neka och flytta till nästa",
 "Remove Noise":"Ta bort brus",
+"Remove Sheet View":"Ta bort vy för bladvisning",
 "Rename Master":"Byt namn på bakgrund",
 "Rename S~heet...":"Byt namn på ~blad...",
 "Reply Comment":"Svara på kommentar",
@@ -499,6 +503,7 @@
 "Select Cell":"Markera cell",
 "Select Column":"Markera kolumn",
 "Select Row":"Markera rad",
+"Select Sheet View":"Välj vy för bladvisning",
 "Select Table":"Markera tabell",
 "Select ~All":"Markera ~allt",
 "Select ~Range...":"Markera ~område...",
@@ -549,6 +554,8 @@
 "Subscript":"Nedsänkt",
 "Sun":"Sol",
 "Superscript":"Upphöjt",
+"Switch To Next Sheet View":"Växla till nästa vy för bladvisning",
+"Switch To Previous Sheet View":"Växla till tidigare vy för bladvisning",
 "Symbol":"Symbol",
 "S~how Columns":"~Visa kolumner",
 "S~lide":"Presentationsbild",
