--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+coolwsd (26.04.0.1-1) unstable; urgency=medium
+
+  * snapshot from main
+
+ -- Andras Timar <andras.timar@collabora.com>  Fri, 20 Feb 2026 12:20:00 +0100
+
 coolwsd (25.04.9.1-1) unstable; urgency=medium
 
   * https://github.com/CollaboraOnline/online/releases/tag/cp-25.04.9-1
